@@ -9,8 +9,8 @@ log4j.rootLogger=info,stdout,logfile
 log4j.appender.logfile=org.apache.log4j.RollingFileAppender
 log4j.appender.logfile.Append=true
 log4j.appender.logfile.File=logs/root.log
-log4j.appender.logfile.MaxFileSize=3000KB
-log4j.appender.logfile.MaxBackupIndex=9
+log4j.appender.logfile.MaxFileSize=10MB
+log4j.appender.logfile.MaxBackupIndex=8
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d %p [%c] - %m%n
 
@@ -45,15 +45,29 @@ log4j.appender.gene.layout=org.apache.log4j.PatternLayout
 log4j.appender.gene.layout.ConversionPattern=%m%n
 
 
+# protein domains logger
+log4j.logger.domains=debug, domains_detail, domains_summary, domains
 
+log4j.appender.domains_detail.Threshold=DEBUG
+log4j.appender.domains_detail=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.domains_detail.DatePattern='.'yyyy-MM
+log4j.appender.domains_detail.Append=true
+log4j.appender.domains_detail.File=logs/domains_detail.log
+log4j.appender.domains_detail.layout=org.apache.log4j.PatternLayout
+log4j.appender.domains_detail.layout.ConversionPattern=[%d] - %m%n
 
+log4j.appender.domains_summary.Threshold=INFO
+log4j.appender.domains_summary=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.domains_summary.DatePattern='.'yyyy-MM
+log4j.appender.domains_summary.Append=true
+log4j.appender.domains_summary.File=logs/domains_summary.log
+log4j.appender.domains_summary.layout=org.apache.log4j.PatternLayout
+log4j.appender.domains_summary.layout.ConversionPattern=[%d] - %m%n
 
-
-
-
-
-
-
-
-
-
+log4j.appender.domains.Threshold=INFO
+log4j.appender.domains=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.domains.DatePattern='.'yyyy-MM-dd
+log4j.appender.domains.Append=true
+log4j.appender.domains.File=logs/domains.log
+log4j.appender.domains.layout=org.apache.log4j.PatternLayout
+log4j.appender.domains.layout.ConversionPattern=%m%n
