@@ -1,3 +1,6 @@
+Sep 24, 2019
+  added gff3 generator for protein domains
+
 ver 1.4.18, Jun 6, 2019
   gff3 for genes generator: optimized logging and parallelized code
 
